# usd-deps

./: .gitignore  Makefile  README.md  build-fabric-usd-deps.py  build-usd-windows.py  make-windows.py
patches/: CMakeLists.txt.prolog  c_flag_overrides.cmake  c_flag_overrides_default.cmake  c_flag_overrides_minimal.cmake  cxx_flag_overrides.cmake  cxx_flag_overrides_default.cmake  cxx_flag_overrides_minimal.cmake
patches/USD/: CMakeLists.txt  Packages.cmake.gcc.patch  Packages.cmake.patch  Public.cmake.patch  extras.CMakeLists.txt.patch  fileSystem.cpp.patch  fileUtils.cpp.patch  gccclangshareddefaults.cmake.patch  module.cpp.epilog  msvcdefaults.cmake.patch  plug.CMakeLists.txt.patch  sdf.layer.h.patch  textFileFormat.cpp.patch  usd.CMakeLists.txt.patch  vt.value.h.patch
patches/alembic/: CMakeLists.txt.patch  Foundation.h.patch
patches/boost/: build_boost.bat  build_boost.sh  build_boost_darwin.sh
patches/hdf5/: ConfigureChecks.cmake.patch
patches/openexr/: CMakeLists.txt.patch  IlmImf.CMakeLists.txt.patch  configure.patch
patches/tbb/: CMakeLists.txt.patch  tbb_config.h.patch
pkgs/: tbb-tbb43u6.tgz
tests/helloworld/: SConstruct  main.cpp
